# smart-code-summarizer

./: CONTRIBUTING.md  README.md  pyproject.toml
src/smart_code_summarizer/: cli.py  main.py
tests/: test_main.py
